--- a/flask/static/style.css
+++ b/flask/static/style.css
@@ -1,3 +1,20 @@
-body {
-	background-color: red;
+textarea {
+	width: 500px;
+	height: 200px;
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
+	margin-top: 40px;
+	margin-bottom: 40px;
+	padding: 10px;
+	font-size: 150%;
+}
+div {
+	text-align: center;
+}
+#Header {
+	font-size: 200%;
+}
+#instructions {
+	margin-top: 30px;
 }
